[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UserInterface/DeleteShape.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/wallbricks5.png" type="Texture" id=2]
[ext_resource path="res://src/Parts/Wall.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/wallbricks2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/wallbricks3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/wallbricks1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/wallbricks6.png" type="Texture" id=7]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.7
bounce = 0.1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 161.527, 10 )

[node name="Wall" type="RigidBody2D"]
collision_mask = 0
mode = 1
physics_material_override = SubResource( 1 )
script = ExtResource( 3 )

[node name="DeleteShape" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="wallbricks1" type="Sprite" parent="."]
position = Vector2( -124.74, -0.503616 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="wallbricks2" type="Sprite" parent="."]
position = Vector2( 19.5609, 2.44956 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="wallbricks3" type="Sprite" parent="."]
position = Vector2( 69.39, -7.4071 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
offset = Vector2( 0, 24.0889 )

[node name="wallbricks4" type="Sprite" parent="."]
position = Vector2( -64.1023, -6.87738 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
offset = Vector2( 0, 24.0889 )

[node name="wallbricks5" type="Sprite" parent="."]
position = Vector2( -26.5899, -0.651314 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="wallbricks6" type="Sprite" parent="."]
position = Vector2( 121.782, -0.127297 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
