extends RigidBody2D


onready var wall_bricks_1 : StreamTexture = load("res://assets/sprites/wallbricks1.png")
onready var wall_bricks_2 : StreamTexture = load("res://assets/sprites/wallbricks2.png")
onready var wall_bricks_3 : StreamTexture = load("res://assets/sprites/wallbricks3.png")
onready var wall_bricks_5 : StreamTexture = load("res://assets/sprites/wallbricks5.png")
onready var wall_bricks_6 : StreamTexture = load("res://assets/sprites/wallbricks6.png")

func _ready():
	pass # Replace with function body.
